# awi

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-shaders.sh  build.rs  changelog.md  readme.md
c_api/: awi.h
examples/minimal/: Cargo.toml  build.rs
examples/minimal/src/: main.rs
res/: details.toml
src/: c_api.rs  lib.rs  window.rs  window_connection.rs  window_ops.rs
src/input/: cursor.rs  joystick.rs  mod.rs
src/input/ffi/: mod.rs
src/input/ffi/emulated/: mod.rs
src/input/ffi/unix/: destroy.rs  joystick_async.rs  joystick_create.rs  joystick_map.rs  joystick_name.rs  joystick_poll_event.rs  mod.rs
src/input/ffi/windows/: mod.rs
src/input/keyboard/: key.rs  mod.rs  modifiers.rs  msg.rs
src/os/android/: glue.rs  input.rs  mod.rs
src/os/linux/: mod.rs  wayland.rs
src/os/rpi/: mod.rs
src/os/wasm32/: mod.rs
src/os/windows/: class_create.rs  connection_create.rs  mod.rs  string.rs  window_create.rs  window_fullscreen.rs  window_poll_event.rs
src/os/windows/input/: mod.rs
src/os/xbox/: mod.rs
src/os_window/: mod.rs
src/os_window/aldarons_os/: mod.rs
src/os_window/android/: glue.rs  input.rs  mod.rs
src/os_window/arduino/: mod.rs
src/os_window/ios/: mod.rs
src/os_window/nintendo_switch/: mod.rs
src/os_window/no_os/: mod.rs
src/os_window/unix/: mod.rs
src/os_window/unix/direct_fb/: mod.rs
src/os_window/unix/input/: mod.rs
src/os_window/unix/wayland/: mod.rs
src/os_window/unix/xcb/: event.rs  ffi.rs  keyboard.rs  mod.rs  native_connection.rs  property.rs
src/os_window/web_assembly/: mod.rs
src/os_window/windows/: class_create.rs  connection_create.rs  mod.rs  string.rs  types.rs  window_create.rs  window_fullscreen.rs  window_poll_event.rs
src/os_window/windows/input/: mod.rs
src/render/: base.rs  mod.rs
src/render/opengl/: mod.rs
src/render/opengl/asi/: buffer.rs  loader.rs  mod.rs  program.rs  texture.rs  uniform_data.rs  vertex_data.rs
src/render/vulkan/: mod.rs
src/render/vulkan/asi/: fence.rs  image.rs  mod.rs  sprite.rs  style.rs  types.rs
src/render/vulkan/asi/gpu/: command_pool.rs  device.rs  mod.rs  queue.rs  sampler.rs  surface.rs
src/render/vulkan/asi/memory/: buffer.rs  mod.rs
src/render/vulkan/renderer/: ffi.rs  mod.rs
src/render/vulkan/shaders/glsl/: complex-frag.glsl  complex-vert.glsl  faded-frag.glsl  faded-vert.glsl  gradient-frag.glsl  gradient-vert.glsl  gui-frag.glsl  gui-vert.glsl  solid-frag.glsl  solid-vert.glsl  texture-frag.glsl  texture-vert.glsl  tinted-frag.glsl  tinted-vert.glsl  vg-frag.glsl  vg-vert.glsl
src/render/vulkan/shaders/res/: complex-frag.spv  complex-vert.spv  faded-frag.spv  faded-vert.spv  gradient-frag.spv  gradient-vert.spv  gui-frag.spv  gui-vert.spv  solid-frag.spv  solid-vert.spv  texture-frag.spv  tinted-frag.spv  tinted-vert.spv
src/screen/: mod.rs
src/screen/vg/: mod.rs
src/screen/win/: common.rs
src/screen/win/wasm32/: mod.rs
src/window/: mod.rs
src/window_connection/: mod.rs
src/window_ops/: mod.rs
web_test/: Cargo.toml
web_test/src/: main.rs  webgl_rendering_context.rs
web_test/static/: index.html
webgl/: Cargo.toml
webgl/src/: main.rs
