# "awi" - Aldaron's Window Interface
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Jeron A. Lau 2017-2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "awi"
version = "0.7.1"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]
license = "BSL-1.0"
documentation = "https://docs.rs/awi"
homepage = "https://plopgrizzly.com/awi"
repository = "https://github.com/plopgrizzly/awi"
readme = "readme.md"
description = "Create a window and handle it's input."
keywords = ["window", "graphics", "interface", "native", "ffi"]
categories = ["gui", "hardware-support", "os", "rendering"]

[dependencies]
afi = "0.5"
afi_docf = "0.0"
stick = "0.4"

# Unix: Runtime Link to xcb,
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "freebsd", target_os = "dragonfly", target_os = "bitrig", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
dl_api = "0.2"

# Windows: Compiletime link to winapi
[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "winerror", "minwindef", "errhandlingapi"] }
