# Copyright Jeron A. Lau 2017-2018.
# Dual-licensed under either the MIT License or the Boost Software License,
# Version 1.0.  (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)
#
# XXXX  X                    /5\——————/5\       XXXX      X           X
# X   X X   XXX   XXXX      |   0    0   |     X      XXX   XXXX XXXX X X   X
# X   X X  X   X  X   X  /"\|     <>     |/"\  X      X   X    X    X X X   X
# XXXX  X  X   X  X   X  \  \\_  ====  _//  /  X   XX X   X   X    X  X  X X
# X     X  X   X  XXXX    \_              _/   X    X X   X  X    X   X   X
# X     X   XXX   X       / \            / \    XXXX  X   X XXXX XXXX X   X
#                 X       \                /                            XX
#                          --____________--

[package]
name = "awi"
version = "0.8.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]
license = "MIT / BSL-1.0"
documentation = "https://docs.rs/awi"
homepage = "https://gitlab.com/plopgrizzly/adi/"
repository = "https://gitlab.com/plopgrizzly/adi/awi"
readme = "README.md"
description = "Create a window and handle it's input."
keywords = ["window", "graphics", "interface", "native", "ffi"]
categories = ["gui", "hardware-support", "os", "rendering"]

[dependencies]
afi = "0.7"
stick = "0.4"

# Unix: Runtime Link to xcb,
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "freebsd", target_os = "dragonfly", target_os = "bitrig", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
dl_api = "0.2"

# Windows: Compiletime link to winapi
[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "winerror", "minwindef", "errhandlingapi"] }
