[package]
name = "minima"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"]
build = "build.rs"

[dependencies]
awi = { path = "../../" }
aci_png = "^0.5"

[build-dependencies]
res = "0.2.0"

[package.metadata.res]
developer = "Aldaron's Tech"
name = "%Minimal Window Example"
comment = "%Window Minimal Example"
description = "%An example program for Window."
