# Cargo.toml -- Aldaron's Window Interface
# Copyright (c) 2017-2018  Jeron A. Lau <jeron.lau@plopgrizzly.com>
# Licensed under the MIT LICENSE

[package]
name = "minima"
version = "0.1.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]

[dependencies]
awi = { path = "../../" }
aci_png = "^0.5.2"
