# "awi" - Aldaron's Window Interface
#
# Copyright Jeron A. Lau 2017-2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "minima"
version = "0.1.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]

[dependencies]
awi = { path = "../../" }
aci_png = "^0.5.2"
